--- a/public/sass/pages/_explore.scss
+++ b/public/sass/pages/_explore.scss
@@ -90,6 +90,24 @@
   padding: 10px 2px;
 }
 
+.explore-toolbar-content-item.streaming-button-select {
+  position: relative;
+}
+
+.explore-toolbar-content-item.streaming-button-select-buttons {
+  display: flex;
+
+  .gf-form-input--form-dropdown {
+    position: static;
+  }
+
+  .gf-form-select-box__menu {
+    position: absolute;
+    left: 0;
+    width: 100%;
+  }
+}
+
 .explore-toolbar-content-item:first-child {
   padding-left: $dashboard-padding;
   margin-right: auto;
